--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -37,3 +37,6 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Code Coverage Summary
+      uses: irongut/CodeCoverageSummary@v1.2.0
+
