--- a/.github/ISSUE_TEMPLATE/league-loader-issue.yml
+++ b/.github/ISSUE_TEMPLATE/league-loader-issue.yml
@@ -7,27 +7,27 @@ assignees:
 body:
   - type: textarea
     attributes:
-      label: What's the Issue?
-      description: Please leave a detailed description of the issue.
-      placeholder: Tell us what you see!
+      label: "What's the Issue?"
+      description: "Please leave a detailed description of the issue."
+      placeholder: "Tell us what you see!"
     validations:
       required: true
 
 - type: dropdown
   attributes:
-    label: League Loader
-    description: Which League Loader has this issue?
+    label: "League Loader"
+    description: "Which League Loader has this issue?"
     options:
-      - ESPN
-      - Sleeper
-      - Yahoo
+      - "ESPN"
+      - "Sleeper"
+      - "Yahoo"
   validations:
     required: true
 
 - type: textarea
   attributes:
-    label: Relevant log output
-    description: Please copy and paste any relevant log output. This will be automatically formatted into code, so no need for backticks.
+    label: "Relevant log output"
+    description: "Please copy and paste any relevant log output. This will be automatically formatted into code\, so no need for backticks."
     render: shell
 
 
