--- a/.github/ISSUE_TEMPLATE/league-loader-issue.yml
+++ b/.github/ISSUE_TEMPLATE/league-loader-issue.yml
@@ -27,7 +27,7 @@ body:
 - type: textarea
   attributes:
     label: "Relevant log output"
-    description: "Please copy and paste any relevant log output. This will be automatically formatted into code\, so no need for backticks."
+    description: "Please copy and paste any relevant log output. This will be automatically formatted into code so no need for backticks."
     render: shell
 
 
