--- a/.github/ISSUE_TEMPLATE/league-loader-issue.yml
+++ b/.github/ISSUE_TEMPLATE/league-loader-issue.yml
@@ -1,5 +1,7 @@
 name:  League Loader Issue
 description: Report an issue for an existing League Loader
+labels:
+  - bug
 assignees:
   - joeyagreco
 
