--- a/.github/ISSUE_TEMPLATE/league-loader-issue.yml
+++ b/.github/ISSUE_TEMPLATE/league-loader-issue.yml
@@ -1,5 +1,6 @@
 name:  League Loader Issue
 description: Report an issue for an existing League Loader
+title: "[LEAGUE LOADER]: "
 labels:
   - bug
 assignees:
