--- a/.github/ISSUE_TEMPLATE/league-loader-issue.yml
+++ b/.github/ISSUE_TEMPLATE/league-loader-issue.yml
@@ -20,6 +20,6 @@ body:
 - type: textarea
   attributes:
     label: Summary
-    description: Describe the new feature/improvement briefly below.
+    description: Describe the issue briefly below.
   validations:
     required: true
