--- a/.github/ISSUE_TEMPLATE/league-loader-issue.yml
+++ b/.github/ISSUE_TEMPLATE/league-loader-issue.yml
@@ -1,5 +1,5 @@
 name:  League Loader Bug
-description: Report an bug for an existing League Loader
+description: Report a bug for an existing League Loader
 title: "[LEAGUE LOADER]: "
 labels:
   - bug
