--- a/.github/ISSUE_TEMPLATE/league-loader-bug.yml
+++ b/.github/ISSUE_TEMPLATE/league-loader-bug.yml
@@ -34,6 +34,6 @@ body:
 - type: textarea
   attributes:
     label: Error Logs
-    description: Paste any error logs here.\n You can also put your League JSON here by using `print(myLeague.toJson)`.
+    description: "Paste any error logs here.\n You can also put your League JSON here by using `print(myLeague.toJson)`."
   validations:
     required: false
