--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy~=1.23.3
-setuptools~=65.3.0
+setuptools~=65.4.0
 openpyxl~=3.0.10
-espn-api~=0.21.1
-yahoofantasy==1.2.3
-sleeper~=1.2.0
+espn-api~=0.22.1
+yahoofantasy~=1.2.3
+sleeper~=1.3.0
 pymfl~=1.0.2
