--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -38,3 +38,13 @@ jobs:
       run: |
         pytest
 
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        directory: ./coverage/reports/
+        env_vars: OS,PYTHON
+        fail_ci_if_error: true
+        name: codecov-umbrella
+        path_to_write_report: ./coverage/codecov_report.txt
+        verbose: true
+
