adding codecov to github actions

--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -38,11 +38,6 @@ jobs:
       run: |
         pytest
 
-    - name: Upload coverage to Codecov.
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        fail_ci_if_error: true
-        name: codecov-umbrella
-        verbose: true
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v1
 
