adding codecov to github actions

--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -36,11 +36,5 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
-
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
-        fail_ci_if_error: true
+        pytest --junitxml=./output.xml
 
