--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -38,3 +38,9 @@ jobs:
       run: |
         pytest --junitxml=./output.xml
 
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        fail_ci_if_error: true
+        files: ./output.xml
