--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -38,7 +38,7 @@ jobs:
       run: |
         pytest --junitxml=./output.xml
 
-    - name: Upload coverage to Codecov
+    - name: Upload coverage to Codecov.
       uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
