adding codecov to github actions

--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -41,6 +41,6 @@ jobs:
     - name: Generate Report
       run: |
         pip install coverage
-        coverage run -m unittest
+        coverage run -m pytest
     - name: Upload Coverage to Codecov
       uses: codecov/codecov-action@v2
