--- a/.github/workflows/main-build.yml
+++ b/.github/workflows/main-build.yml
@@ -36,11 +36,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest --junitxml=./output.xml
-
-    - name: Generate Report
-      run: |
-        pip install coverage
-        coverage run -m pytest
-    - name: Upload Coverage to Codecov
-      uses: codecov/codecov-action@v2
+        pytest
