--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 numpy~=1.23.4
-setuptools~=65.4.1
+setuptools==65.5.0
 openpyxl~=3.0.10
-espn-api~=0.24.0
+espn-api==0.25.0
 yahoofantasy~=1.2.3
-sleeper~=1.3.0
+sleeper==1.3.1
 pymfl~=1.0.2
