updated issue templates

--- a/.github/ISSUE_TEMPLATE/league-loader-bug.yml
+++ b/.github/ISSUE_TEMPLATE/league-loader-bug.yml
@@ -12,6 +12,8 @@ body:
     label: League Loader
     options:
      - ESPN
+     - Fleaflicker
+     - MyFantasyLeague
      - Sleeper
      - Yahoo
   validations:
