--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 numpy~=1.24.1
 openpyxl~=3.1.1
-espn-api~=0.29.2
-yahoofantasy~=1.4.0
+espn-api~=0.30.0
+yahoofantasy~=1.4.1
 sleeper~=1.5.0
 pymfl~=1.0.2
 fleaflicker~=1.0.0
+typing-extensions~=4.5.0
