--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
 [tool.black]
 line-length = 100
 skip-magic-trailing-comma = true
+
+[autoflake]
+ignore_init_module_imports = true
+in_place = true
+recursive = true
+remove_all_unused_imports = true
