--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,7 @@
 [tool.black]
 line-length = 100
 skip-magic-trailing-comma = true
+include = '\.py$'
 
 [autoflake]
 ignore_init_module_imports = true
