made black formatter quiet

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 line-length = 100
 skip-magic-trailing-comma = true
 include = '\.py$'
+quiet = true
 
 [autoflake]
 ignore_init_module_imports = true
