--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ numpy~=1.24.1
 openpyxl~=3.1.1
 espn-api~=0.30.0
 yahoofantasy~=1.4.0
-sleeper~=1.5.0
+sleeper~=1.6.0
 pymfl~=1.0.2
 fleaflicker~=1.0.0
 typing-extensions~=4.5.0
+configparser~=5.3.0
