added e2e test and updated example file to include divisions

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -34,3 +34,8 @@ jobs:
       - name: Check Build
         run: |
           twine check dist/*
+      - name: Install Package
+        run: pip install .
+
+      - name: Run Test Script
+        run: python e2e/base.py
