--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,4 +1,4 @@
-name: Build Python Package
+name: End-to-End Tests
 
 on:
   push:
@@ -47,10 +47,8 @@ jobs:
           echo "Contents of Temp Directory:"
           ls -l ${{ env.TMP_DIR }}
           if [ -z "$(ls -A ${{ env.TMP_DIR }})" ]; then
-             echo "Temp directory is empty"
+             echo "Excel file not found"
              exit 1
-          else
-             echo "Temp directory is not empty"
           fi
         env:
           TEMP_DIR: ${{ env.TMP_DIR }}
