--- a/.github/workflows/formatting-check.yml
+++ b/.github/workflows/formatting-check.yml
@@ -32,6 +32,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install black==23.3.0
 
+      - name: Check for Duplicate Test Method Names
+        run: |
+          python ../batch/helper/duplicate-test-methods.py
+
       - name: Check Formatting
         run: |
           black --config pyproject.toml --check --diff .
