--- a/.github/workflows/formatting-check.yml
+++ b/.github/workflows/formatting-check.yml
@@ -31,6 +31,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install black==23.3.0
+          pip install autoflake==2.1.1
 
       - name: Check for Duplicate Test Method Names
         run: |
@@ -39,9 +40,6 @@ jobs:
       - name: Check Formatting
         run: |
           black --config pyproject.toml --check --diff .
-
-      - name: Install autoflake
-        run: pip install autoflake==2.1.1
 
       - name: Check for Unused Imports
         run: autoflake --config pyproject.toml --check .
