--- a/.github/workflows/python-version-check.yml
+++ b/.github/workflows/python-version-check.yml
@@ -19,21 +19,33 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Python 3.10
+      - name: Get Python versions
+        id: get-python-versions
+        run: |
+          MINIMUM_VERSION=$(grep -oP '__version_minimum_python__ = "\K.*(?=")' _version.py)
+          echo "::set-output name=current_version::${MINIMUM_VERSION}"
+          OLD_VERSION="${MINIMUM_VERSION%.*}.$((${MINIMUM_VERSION##*.}-1))"
+          echo "::set-output name=old_version::${OLD_VERSION}"
+
+      - name: Set up Current Python Version
         uses: actions/setup-python@v3
         with:
-          python-version: "3.10"
+          python-version: ${{ steps.get-python-versions.outputs.current_version }}
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
-      - name: Set up Python 3.9
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.9"
-
       - name: Test setup.py
         run: |
-          python setup.py install || echo "setup.py failed as expected"
+          python setup.py install || echo "Current Python Version setup.py test failed"
+
+      - name: Set up Old Python Version
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ steps.get-python-versions.outputs.old_version }}
+
+      - name: Test setup.py with old Python
+        run: |
+          python setup.py install || echo "Old Python Version setup.py test failed"
