--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -23,12 +23,18 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
+      - name: Get Current Required Python Version
+        id: get-python-versions
+        run: |
+          MINIMUM_VERSION=$(grep -oP '__version_minimum_python__ = "\K.*(?=")' leeger/_version.py)
+          echo "::set-output name=current_version::${MINIMUM_VERSION}"
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: "3.10"
+          python-version: ${{ steps.get-python-versions.outputs.current_version }}
 
-      - name: Install dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install setuptools wheel twine
@@ -36,7 +42,7 @@ jobs:
       - name: Build Package
         run: python setup.py sdist bdist_wheel
 
-      - name: Check Build
+      - name: Check Package
         run: |
           twine check dist/*
 
@@ -46,7 +52,7 @@ jobs:
       - name: Create Temporary Directory
         run: echo "TMP_DIR=$(mktemp -d)" >> $GITHUB_ENV
 
-      - name: Test Excel
+      - name: Run Excel Tests
         run: |
           python e2e/test-excel.py
           if [ ! -f "${{ env.TMP_DIR }}/excel.xlsx" ]; then
