--- a/.github/workflows/formatting-check.yml
+++ b/.github/workflows/formatting-check.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
     inputs:
       manual:
-        description: "Trigger the workflow manually"
+        description: "Trigger manually"
         required: false
 
 jobs:
@@ -19,27 +19,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Get Python version
+        id: get-python-versions
+        run: |
+          MINIMUM_VERSION=$(grep -oP '__version_minimum_python__ = "\K.*(?=")' leeger/_version.py)
+          echo "::set-output name=current_version::${MINIMUM_VERSION}"
+
+      - uses: actions/setup-python@v2
         with:
-          python-version: "3.10"
+          python-version: ${{ steps.get-python-versions.outputs.current_version }}
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black==23.3.0
-          pip install autoflake==2.1.1
+          pip install black==23.3.0 autoflake==2.1.1
 
-      - name: Check for Duplicate Test Method Names
-        run: |
-          python batch/helper/duplicate-test-methods.py
+      - name: Check Duplicate Test Method Names
+        run: python batch/helper/duplicate-test-methods.py
 
       - name: Check Formatting
-        run: |
-          black --config pyproject.toml --check --diff .
+        run: black --config pyproject.toml --check --diff .
 
-      - name: Check for Unused Imports
+      - name: Check Unused Imports
         run: autoflake --config pyproject.toml --check .
