--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -27,12 +27,12 @@ jobs:
         id: get-python-versions
         run: |
           MINIMUM_VERSION=$(grep -oP '__version_minimum_python__ = "\K.*(?=")' leeger/_version.py)
-          echo "::set-output name=current_version::${MINIMUM_VERSION}"
+          echo "CURRENT_VERSION=$MINIMUM_VERSION" >> $GITHUB_ENV
 
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ steps.get-python-versions.outputs.current_version }}
+          python-version: ${{ env.CURRENT_VERSION }}
 
       - name: Install Dependencies
         run: |
