--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -26,12 +26,12 @@ jobs:
         id: get-python-versions
         run: |
           MINIMUM_VERSION=$(grep -oP '__version_minimum_python__ = "\K.*(?=")' leeger/_version.py)
-          echo "::set-output name=current_version::${MINIMUM_VERSION}"
+          echo "CURRENT_VERSION=$MINIMUM_VERSION" >> $GITHUB_ENV
 
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: ${{ steps.get-python-versions.outputs.current_version }}
+          python-version: ${{ env.CURRENT_VERSION }}
 
       - name: Install dependencies
         run: |
