--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,10 @@ skip-magic-trailing-comma = true
 include = '\.py$'
 quiet = true
 
+[tool.isort]
+profile = "black"
+line_length = 100
+
 [autoflake]
 ignore_init_module_imports = true
 in_place = true
