--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-espn_api==0.33.0
-fleaflicker==1.0.0
-numpy==1.26.2
-openpyxl==3.1.2
-pymfl==1.0.2
-setuptools==69.0.2
-sleeper==1.7.0
-yahoofantasy==1.4.2
+espn_api~=0.33.0
+fleaflicker~=1.0.0
+numpy~=1.26.2
+openpyxl~=3.1.2
+pymfl~=1.0.2
+setuptools~=69.0.2
+sleeper~=1.7.3
+yahoofantasy~=1.4.2
