--- a/.github/workflows/formatting-check.yml
+++ b/.github/workflows/formatting-check.yml
@@ -10,34 +10,31 @@ on:
   workflow_dispatch:
     inputs:
       manual:
-        description: "Trigger the workflow manually"
+        description: "Trigger manually"
         required: false
 
 jobs:
   format:
-    name: Check code formatting
+    name: formatting check
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Get Python version
+        id: get-python-versions
+        run: |
+          MINIMUM_VERSION=$(grep -oP '__version_minimum_python__ = "\K.*(?=")' leeger/_version.py)
+          echo "CURRENT_VERSION=$MINIMUM_VERSION" >> $GITHUB_ENV
+
+      - uses: actions/setup-python@v2
         with:
-          python-version: "3.10"
+          python-version: ${{ env.CURRENT_VERSION }}
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black==23.3.0
+          make deps
 
       - name: Check Formatting
-        run: |
-          black --config pyproject.toml --check --diff .
-
-      - name: Install autoflake
-        run: pip install autoflake==2.1.1
-
-      - name: Check for Unused Imports
-        run: autoflake --config pyproject.toml --check .
+        run: make fmt-check
