--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-numpy~=1.24.1
-openpyxl~=3.1.1
-espn-api~=0.30.0
-yahoofantasy~=1.4.0
-sleeper~=1.7.0
-pymfl~=1.0.2
+espn_api~=0.33.0
 fleaflicker~=1.0.0
-typing-extensions~=4.5.0
-configparser~=5.3.0
+numpy~=1.24.4
+openpyxl~=3.1.2
+pymfl~=1.0.2
+setuptools~=66.1.1
+sleeper~=1.6.0
+yahoofantasy~=1.4.2
